# cztery-de

./: .gitignore  README.md  package-lock.json  package.json
backend/: README.md  main.py  pyproject.toml
frontend/: next.config.ts  package-lock.json  package.json
frontend/src/app/: page.tsx
frontend/src/components/: FourDVisualization.tsx  KeyboardControls.tsx
frontend/src/shapes/: definitions.ts
frontend/src/store/: transformStore.ts
frontend/src/types/: 4d.ts
llm-data/: concat.txt
shared/: math4d.py
