[tool.poetry]
name = "cztery-de-backend"
version = "0.1.0"
description = "4D visualization backend"
authors = ["Tobiasz Bajek <tobiasz@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.116.1"
uvicorn = {extras = ["standard"], version = "^0.35.0"}
pydantic = "^2.11.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
